[package]
name = "aoc"
version = "0.1.0"
authors = ["James Byatt <grumpyjames@gmail.com>"]

[dependencies]
regex = "1"

[[bin]]
name = "six"
path = "src/six.rs"

[[bin]]
name = "seven"
path = "src/seven.rs"

[[bin]]
name = "eight"
path = "src/eight.rs"

[[bin]]
name = "nine"
path = "src/nine.rs"

[[bin]]
name = "nine-alt"
path = "src/nine-alt.rs"

[[bin]]
name = "ten"
path = "src/ten.rs"

[[bin]]
name = "eleven"
path = "src/eleven.rs"